FIX: removed extra z-index for popup in obs page

--- a/src/styles/_obs.scss
+++ b/src/styles/_obs.scss
@@ -4,11 +4,6 @@
     background-color: #000;
     opacity: 1;
   }
-
-  .popup {
-    z-index: 1000;
-  }
-
 }
 
 .obs {
